<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline16" android:layout_marginTop="8dp" android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline16"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline4"
                                          android:orientation="horizontal"
                                          app:layout_constraintGuide_percent="0.15"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline6"
                                          android:orientation="horizontal"
                                          app:layout_constraintGuide_percent="0.22"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline7"
                                          android:orientation="horizontal"
                                          app:layout_constraintGuide_percent="0.29"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline5"
                                          android:orientation="vertical"
                                          app:layout_constraintGuide_percent="0.50121653"/>
    <Button
            android:text="@string/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button5" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline5" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="@+id/guideline4"/>
    <Button
            android:text="@string/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button7" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline5" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/guideline4"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"/>
    <Switch
            android:text="@string/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch1"
            app:layout_constraintTop_toTopOf="@+id/guideline6" app:layout_constraintBottom_toTopOf="@+id/guideline6"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline5" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/guideline7"
            app:layout_constraintBottom_toTopOf="@+id/guideline7"/>
    <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar2"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline5" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline7" app:layout_constraintBottom_toTopOf="@+id/guideline7"
            android:indeterminate="true"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline9"
                                          android:orientation="horizontal"
                                          app:layout_constraintGuide_percent="0.35"/>
    <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:id="@+id/progressBar3"
            app:layout_constraintBottom_toTopOf="@+id/guideline9" app:layout_constraintTop_toTopOf="@+id/guideline9"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline10"
                                          android:orientation="horizontal"
                                          app:layout_constraintGuide_percent="0.42"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline10" app:layout_constraintBottom_toTopOf="@+id/guideline10"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="32dp" android:layout_marginStart="32dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline5" android:autofillHints="" tools:targetApi="o"
            android:hint="@string/name"/>
    <Button
            android:text="@string/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button9" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline10" app:layout_constraintBottom_toTopOf="@+id/guideline10"
            app:layout_constraintStart_toStartOf="@+id/guideline5" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline11"
                                          android:orientation="horizontal"
                                          app:layout_constraintGuide_percent="0.57"/>
    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintEnd_toStartOf="@+id/guideline5"
            android:layout_marginEnd="8dp" app:layout_constraintTop_toTopOf="@+id/guideline11"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline11" android:id="@+id/radioGroup">
        <RadioButton
                android:text="@string/radiobutton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/radioButton2" android:layout_weight="1"
                android:checked="true"/>
        <RadioButton
                android:text="@string/radiobutton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/radioButton" android:layout_weight="1"/>
    </RadioGroup>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="80dp" app:srcCompat="@drawable/android"
            android:id="@+id/imageView" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline11"
            app:layout_constraintStart_toStartOf="@+id/guideline5" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline11" app:layout_constraintDimensionRatio="w,1:1"
            android:contentDescription="@string/icon"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline12"
                                          android:orientation="horizontal"
                                          app:layout_constraintGuide_percent="0.67"/>
    <SeekBar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar"
            app:layout_constraintTop_toTopOf="@+id/guideline12" app:layout_constraintBottom_toTopOf="@+id/guideline12"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline14"
                                          android:orientation="horizontal"
                                          app:layout_constraintGuide_percent="0.75"/>
    <CheckBox
            android:text="@string/checkbox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/checkBox2"
            app:layout_constraintTop_toTopOf="@+id/guideline14" app:layout_constraintBottom_toTopOf="@+id/guideline14"/>
    <CheckBox
            android:text="@string/checkbox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox2"
            app:layout_constraintTop_toTopOf="@+id/checkBox" app:layout_constraintBottom_toBottomOf="@+id/checkBox"
            app:layout_constraintStart_toEndOf="@+id/checkBox" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/checkBox3"/>
    <CheckBox
            android:text="@string/checkbox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox3"
            app:layout_constraintTop_toTopOf="@+id/checkBox2" app:layout_constraintBottom_toBottomOf="@+id/checkBox2"
            app:layout_constraintStart_toEndOf="@+id/checkBox2" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline15"
                                          android:orientation="horizontal"
                                          app:layout_constraintGuide_percent="0.85"/>
    <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ratingBar" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline15" app:layout_constraintBottom_toTopOf="@+id/guideline15"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline16"
                                          android:orientation="horizontal"
                                          app:layout_constraintGuide_percent="0.06"/>
</android.support.constraint.ConstraintLayout>